test/Fail/Issue6633.err
Issue6633.agda:32.48-49: error: [UnequalSorts]
SSet != Set
when checking that the solution x ≡ˢ y of metavariable _A_33 has
the expected type Set
